# ubiq-rust

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
src/: algorithm.rs  base64.rs  cipher.rs  client.rs  credentials.rs  decryption.rs  encryption.rs  error.rs  header.rs  lib.rs  session.rs  support.rs
src/support/: base64.rs  cipher.rs  decryption.rs  digest.rs  encryption.rs  hmac.rs  mod.rs
tests/: credentials.rs  decryption.rs  encryption.rs
