[package]
name = "ubiq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
configparser = "3.0.2"
reqwest = { version = "0.11.18", features = [ "blocking", "json" ] }
chrono = "0.4.26"
sha2 = "0.10.7"
base64 = "0.21.2"
hmac = "0.12.1"
serde = { version = "1.0.183", features = [ "derive" ] }
serde_json = "1.0.105"
openssl = "0.10.56"
