[package]
name = "ubiq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
configparser = "3.0.2"
reqwest = { version = "0.11.18", features = [ "blocking", "json" ] }
serde = { version = "1.0.183", features = [ "derive" ] }
serde_json = "1.0.105"
chrono = "0.4.26"
openssl = "0.10.56"
sha2 = "0.10.7"
