[package]
name = "ubiq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
configparser = "3.0.2"
reqwest = { version = "0.11.18", features = [ "blocking", "json" ] }
serde = { version = "1.0.183", features = [ "derive" ] }
serde_json = "1.0.105"
chrono = "0.4.26"
openssl = "0.10.56"
sha2 = "0.10.7"
hmac = "0.12.1"
pkcs8 = { version = "0.10.2", features = [ "encryption", "pem" ] }
pkcs5 = { version = "0.7.1", features = [ "sha1-insecure" ] }
rsa = "0.9.2"
sha1 = "0.10.5"
base64 = "0.21.2"
rand = "0.8.5"
